@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-00
+2011-10-04 Andy Salnikov
+- CsPadCommonModeSubV1::findCommonMode() now takes int16_t* for image data
+- CsPadFilterV1::filter() was missing const for input data
+
 Tag: V00-00-14
 2011-09-11 Andy Salnikov
 - in CsPadCommonModeSubV1 inlined rounding to improve performance
